--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -12,6 +12,8 @@ sExecuteKeyTop =
 sExecuteKeyBottom = 
 uShowHideKey = 26
 bBottomExecuteKeyComboOnly = 0
+bKeyPressToEnterEdit = 0
+uKeyToEnterEdit = 22
 
 [Page]
 uPositionSelect = 4
@@ -106,3 +108,13 @@ fPotionMinPerfect = 0.7
 fPotionMaxPerfect = 1.2
 bDisableReEquipOfActives = 0
 bSortArrowByQuantity = 0
+
+[CleanupSetting]
+bAutoCleanup = 0
+bCleanArmor = 1
+bCleanWeapon = 1
+bCleanSpell = 1
+bCleanAlchemyItem = 0
+bCleanShout = 1
+bCleanLight = 0
+bCleanScroll = 0
