--- a/LamasTinyHUD.ini
+++ b/LamasTinyHUD.ini
@@ -1,12 +1,11 @@
 [General]
-
-;0 trace; 1 debug; 2 info
-iLogLevel = 2
+bIsDebug = false
 
 [Image]
 bDrawKeyBackground = 0
 
 [Font]
+bLoad = true
 sName = DrukaatieBurti-Regular.ttf
 fSize = 20
 bChineseFull = 0
