--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -14,6 +14,7 @@ uShowHideKey = 26
 bBottomExecuteKeyComboOnly = 0
 bKeyPressToEnterEdit = 0
 uKeyToEnterEdit = 22
+uLeftOrOverwriteEditKey = 38
 
 [Page]
 uPositionSelect = 4
@@ -108,6 +109,7 @@ fPotionMinPerfect = 0.7
 fPotionMaxPerfect = 1.2
 bDisableReEquipOfActives = 0
 bSortArrowByQuantity = 0
+uApplyPoisonCharges = 5
 
 [CleanupSetting]
 bAutoCleanup = 0
