--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -120,3 +120,7 @@ bCleanAlchemyItem = 0
 bCleanShout = 1
 bCleanLight = 0
 bCleanScroll = 0
+
+[AnimationSetting]
+uAlphaSlotAnimation = 51
+fDurationSlotAnimation = 0.1
