--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -1161,6 +1161,42 @@
                 }
             ]
         },
+        
+        {
+            "pageDisplayName": "$LamasTinyHUD_AnimationSetting",
+            "cursorFillMode": "topToBottom",
+            "content": [{
+                    "text": "$LamasTinyHUD_AnimationSetting_HeaderText_SlotAnimation",
+                    "type": "header"
+                },
+                {
+                    "id": "uAlphaSlotAnimation:AnimationSetting",
+                    "text": "$LamasTinyHUD_AnimationSetting_AlphaSlotAnimation_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_AnimationSetting_AlphaSlotAnimation_InfoText",
+                    "valueOptions": {
+                        "min": 0,
+                        "max": 255,
+                        "step": 1,
+                        "formatString": "{0}",
+                        "sourceType": "ModSettingInt"
+                    }
+                },
+                {
+                    "id": "fDurationSlotAnimation:AnimationSetting",
+                    "text": "$LamasTinyHUD_AnimationSetting_DurationSlotAnimation_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_AnimationSetting_DurationSlotAnimation_InfoText",
+                    "valueOptions": {
+                        "min": 0.1,
+                        "max": 1.0,
+                        "step": 0.1,
+                        "formatString": "{1}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                }
+            ]
+        },
         {
             "pageDisplayName": "$LamasTinyHUD_MiscSetting",
             "cursorFillMode": "topToBottom",
