--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -15,6 +15,7 @@ bBottomExecuteKeyComboOnly = 0
 bKeyPressToEnterEdit = 0
 uKeyToEnterEdit = 22
 uLeftOrOverwriteEditKey = 38
+uRemoveKey = 37
 
 [Page]
 uPositionSelect = 4
