--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -111,6 +111,7 @@ fPotionMaxPerfect = 1.2
 bDisableReEquipOfActives = 0
 bSortArrowByQuantity = 0
 uApplyPoisonCharges = 5
+bTryDualCastTopSpell = 0
 
 [CleanupSetting]
 bAutoCleanup = 0
