--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -38,8 +38,8 @@ sActorValue =
 [HudSetting]
 sDisplayResolutionWidth =
 sDisplayResolutionHeight = 
-fHudImageScaleWidth = 0.23
-fHudImageScaleHeight = 0.23
+fHudImageScaleWidth = 0.16
+fHudImageScaleHeight = 0.16
 fHudImagePositionWidth = 200
 fHudImagePositionHeight = 775
 fHudSlotPositionOffsetX = 105
@@ -55,17 +55,19 @@ fToggleKeyOffsetY = 115
 fCurrentItemsOffsetX = -15
 fCurrentItemsOffsetY = 200
 fSlotItemNameOffsetHorizontalX = -15
-fSlotItemNameOffsetHorizontalY = 85
+fSlotItemNameOffsetHorizontalY = 100
 fSlotItemNameOffsetVerticalX = 10
 fSlotItemNameOffsetVerticalY = 65
-fArrowSlotOffsetX = -115
-fArrowSlotOffsetY = 115
-fHudArrowImageScaleWidth = 0.13
-fHudArrowImageScaleHeight = 0.13
+fArrowSlotOffsetX = -125
+fArrowSlotOffsetY = 125
+fHudArrowImageScaleWidth = 0.09
+fHudArrowImageScaleHeight = 0.09
 fArrowIconScaleWidth = 0.05
 fArrowIconScaleHeight = 0.05
 fArrowSlotCountTextOffset = 12
 fMasterScale = 1
+fCurrentShoutOffsetX = -10
+fCurrentShoutOffsetY = -225
 
 [GraphicSetting]
 uBackgroundTransparency = 255
@@ -87,6 +89,8 @@ bDrawCurrentItemsText = 1
 fArrowCountFontSize = 20
 bDrawItemNameText = 1
 bDrawToggleButton = 1
+bDrawCurrentShoutText = 0
+fCurrentShoutFontSize = 20
 
 [MiscSetting]
 bActionCheck = 0
