--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -114,7 +114,8 @@ fPotionMinPerfect = 0.7
 fPotionMaxPerfect = 1.2
 bDisableReEquipOfActives = 0
 bSortArrowByQuantity = 0
-uApplyPoisonCharges = 5
+bPoisonDoseOverwrite = 0
+uApplyPoisonDose = 5
 bTryDualCastTopSpell = 0
 
 [CleanupSetting]
