--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -91,6 +91,8 @@ bDrawItemNameText = 1
 bDrawToggleButton = 1
 bDrawCurrentShoutText = 0
 fCurrentShoutFontSize = 20
+fItemNameTextFontSize = 20
+bDrawPageId = 0
 
 [MiscSetting]
 bActionCheck = 0
