--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -74,7 +74,10 @@ uBackgroundTransparency = 255
 uBackgroundIconTransparency = 255
 uIconTransparency = 125
 uKeyTransparency = 255
-uTextTransparency = 255
+uCurrentItemsTransparency = 255
+uCurrentShoutTransparency = 255
+uSlotCountTransparency = 255
+uSlotItemNameTransparency = 255
 uIconTransparencyBlocked = 50
 uCurrentItemsRed = 255
 uCurrentItemsGreen = 255
@@ -82,6 +85,9 @@ uCurrentItemsBlue = 255
 uSlotCountRed = 255
 uSlotCountGreen = 255
 uSlotCountBlue = 255
+uSlotItemRed = 255
+uSlotItemGreen = 255
+uSlotItemBlue = 255
 fSlotCountTextFontSize = 20
 fCurrentItemsFontSize = 20
 uSlotButtonFeedback = 175
